--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   background-color: rgb(36, 36, 36);
   margin: 0%;
   padding: 0%;
-  border: 1px solid blue;
   width: 100%;
   height: auto;
 }
@@ -19,9 +18,9 @@
 }
 
 div.izq.container.col-4 {
-  background-color: #3f3f40;
+  background-color: #2c2c2c;
   color: #f2f2f2;
-  padding: 2rem 3.5rem 2rem 1rem;
+  padding: 2rem 5rem 2rem 3.5rem;
 }
 div.izq.container.col-4 a.navbar-brand {
   padding: 0%;
@@ -53,7 +52,7 @@ div.izq.container.col-4 .contact div.contIndividual h5 i {
   margin: 3px 3px 3px 0px;
   padding: 3px;
   background-color: #f2f2f2;
-  color: #3f3f40;
+  color: #2c2c2c;
   height: 32px;
   width: 32px;
 }
@@ -86,12 +85,12 @@ div.der.container.col-8 header {
   padding: 2.25rem;
   margin: 0%;
   margin-top: 20px;
-  background-color: #3f3f40;
+  background-color: #2c2c2c;
   color: #f2f2f2;
 }
 div.der.container.col-8 header h1 {
   font-family: "Bebas Neue", cursive;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.15em;
   font-size: 3.5rem;
   font-weight: 600;
   margin-top: 1rem;
@@ -106,33 +105,34 @@ div.der.container.col-8 #experienciaLaboral {
   padding: 0.25rem 1rem;
 }
 div.der.container.col-8 #experienciaLaboral h3 {
-  margin: 30px 0px 10px 15px;
+  margin: 30px 0px 15px 15px;
   letter-spacing: 0.1em;
   padding: 0.25rem;
 }
-div.der.container.col-8 .accordion-item {
-  border: 1px solid rgb(17, 41, 25);
-}
 div.der.container.col-8 .accordion-button {
-  background-color: rgb(185, 185, 185);
-  color: rgb(23, 110, 30);
+  background-color: #f2f2f2;
+  color: #2c2c2c;
   font-size: large;
   font-weight: 500;
 }
 div.der.container.col-8 .accordion-button:focus {
-  background-color: rgb(78, 16, 0);
+  background-color: #dcdcdc;
   border-color: #1c1b1d;
-  color: rgb(184, 181, 181);
+  color: #2c2c2c;
+  box-shadow: 0px 0px 10px 0.25rem #969696;
 }
 div.der.container.col-8 .accordion-button:active {
-  background-color: rgb(85, 100, 83);
-  color: rgb(141, 139, 1);
+  background-color: #2c2c2c;
+  color: #f2f2f2;
 }
 div.der.container.col-8 button.accordion-button::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FF06EF'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%233f3f40'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 div.der.container.col-8 .accordion-body {
   background-color: #f2f2f2;
+  box-shadow: 0px 0px 10px 0px rgba(163, 163, 163, 0.3) inset;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(163, 163, 163, 0.3) inset;
+  -moz-box-shadow: 0px 0px 10px 0px rgba(163, 163, 163, 0.3) inset;
 }
 
 /*# sourceMappingURL=style.css.map */
