agrego funcionalidad cambio de colores

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500&display=swap");
 .container-fluid {
-  background-color: rgb(36, 36, 36);
+  background-color: #2c2c2c;
   margin: 0%;
   padding: 0%;
   width: 100%;
@@ -32,6 +32,10 @@ div.izq.container.col-4 a.navbar-brand img {
   border-radius: 50%;
   width: 100%;
   max-width: 180px;
+  transition-duration: 1.2s;
+}
+div.izq.container.col-4 a.navbar-brand img:hover {
+  transform: scale(1.15);
 }
 div.izq.container.col-4 hr {
   border: 2px solid #f2f2f2;
@@ -56,11 +60,26 @@ div.izq.container.col-4 .contact div.contIndividual h5 i {
   color: #2c2c2c;
   height: 32px;
   width: 32px;
+  transition: 2s;
 }
 div.izq.container.col-4 .contact div.contIndividual h5 a {
   text-decoration: none;
   font-size: large;
   color: #f2f2f2;
+}
+div.izq.container.col-4 .contact div.contIndividual h5:hover {
+  transform: scale(1.01);
+}
+div.izq.container.col-4 .contact div.contIndividual h5:hover i {
+  color: black;
+  background: #ff7200;
+  background: linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+  background: -webkit-linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+  background: -moz-linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+}
+div.izq.container.col-4 .contact div.contIndividual h5:hover a:hover {
+  color: #f2f2f2;
+  text-shadow: 0px 0px 7px #f2f2f2;
 }
 div.izq.container.col-4 section.idiomas p {
   margin: 16px auto 2px 0px;
@@ -85,11 +104,18 @@ div.der.container.col-8 {
 div.der.container.col-8 header {
   padding: 2.25rem;
   margin: 0%;
+  margin-right: 2rem;
   margin-top: 20px;
   background-color: #2c2c2c;
   color: #f2f2f2;
+  display: inline-flex;
+  justify-content: space-between;
+  width: 99%;
 }
-div.der.container.col-8 header h1 {
+div.der.container.col-8 header .nombre {
+  margin-right: 2em;
+}
+div.der.container.col-8 header .nombre h1 {
   font-family: "Bebas Neue", cursive;
   letter-spacing: 0.15em;
   font-size: 3.5rem;
@@ -97,15 +123,141 @@ div.der.container.col-8 header h1 {
   margin-top: 1rem;
   padding-top: 1rem;
 }
-div.der.container.col-8 header h5 {
+div.der.container.col-8 header .nombre h5 {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   margin-bottom: 1rem;
 }
-div.der.container.col-8 #experienciaLaboral, div.der.container.col-8 #educación, div.der.container.col-8 #certificados {
+div.der.container.col-8 header .btns {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+  /* The switch - the box around the slider */
+  /* Hide default HTML checkbox */
+  /* The slider */
+}
+div.der.container.col-8 header .btns .switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+div.der.container.col-8 header .btns .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+div.der.container.col-8 header .btns .slider {
+  --background: #161616;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--background);
+  transition: 0.5s;
+  border-radius: 30px;
+}
+div.der.container.col-8 header .btns .slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  left: 10%;
+  bottom: 15%;
+  box-shadow: inset 8px -4px 0px 0px #f8f5c7;
+  background: var(--background);
+  transition: 0.5s;
+}
+div.der.container.col-8 header .btns input:checked + .slider {
+  background-color: #ababac;
+}
+div.der.container.col-8 header .btns input:checked + .slider:before {
+  transform: translateX(100%);
+  box-shadow: inset 15px -4px 0px 15px #f8f5c7;
+}
+div.der.container.col-8 header .btns .dropbtn {
+  border-radius: 50%;
+  border: none;
+  margin: 3px 3px 3px 0px;
+  padding: 3px;
+  background-color: #f2f2f2;
+  color: #2c2c2c;
+  height: 32px;
+  width: 32px;
+  transition: 1.5s;
+  cursor: pointer;
+}
+div.der.container.col-8 header .btns .dropdown:hover .dropbtn {
+  transform: scale(1.01);
+  transform: rotate(-45deg);
+  color: black;
+  background: #ff7200;
+  background: linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+  background: -webkit-linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+  background: -moz-linear-gradient(90deg, #ff7200 0%, #e0c801 80%);
+}
+div.der.container.col-8 header .btns .dropdown {
+  position: relative;
+  display: inline-block;
+}
+div.der.container.col-8 header .btns .dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #2c2c2c;
+  min-width: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+div.der.container.col-8 header .btns .dropdown-content i {
+  padding: 10px 10px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2px;
+  font-size: x-large;
+  height: 32px;
+  width: 32px;
+  border: 1px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+div.der.container.col-8 header .btns #n1 {
+  background-color: #ffffff;
+  color: #09402c;
+}
+div.der.container.col-8 header .btns #n2 {
+  background-color: #ffffff;
+  color: #590212;
+}
+div.der.container.col-8 header .btns #n3 {
+  background-color: #ffffff;
+  color: #10365a;
+}
+div.der.container.col-8 header .btns #n4 {
+  background-color: #ffffff;
+  color: #ffd085;
+}
+div.der.container.col-8 header .btns .dropdown-content i:hover {
+  transform: scale(1.2);
+}
+div.der.container.col-8 header .btns .dropdown:hover .dropdown-content {
+  display: block;
+}
+div.der.container.col-8 #experienciaLaboral,
+div.der.container.col-8 #educación,
+div.der.container.col-8 #certificados {
   padding: 0.25rem 1rem;
 }
-div.der.container.col-8 #experienciaLaboral h3, div.der.container.col-8 #educación h3, div.der.container.col-8 #certificados h3 {
+div.der.container.col-8 #experienciaLaboral h3,
+div.der.container.col-8 #educación h3,
+div.der.container.col-8 #certificados h3 {
   margin: 30px 0px 15px 15px;
   letter-spacing: 0.1em;
   padding: 0.25rem;
