--- a/css/style.css
+++ b/css/style.css
@@ -133,52 +133,6 @@ div.der.container.col-8 header .btns {
   flex-direction: column;
   align-items: flex-end;
   gap: 10px;
-  /* The switch - the box around the slider */
-  /* Hide default HTML checkbox */
-  /* The slider */
-}
-div.der.container.col-8 header .btns .switch {
-  font-size: 17px;
-  position: relative;
-  display: inline-block;
-  width: 3.5em;
-  height: 2em;
-}
-div.der.container.col-8 header .btns .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-div.der.container.col-8 header .btns .slider {
-  --background: #161616;
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--background);
-  transition: 0.5s;
-  border-radius: 30px;
-}
-div.der.container.col-8 header .btns .slider:before {
-  position: absolute;
-  content: "";
-  height: 1.4em;
-  width: 1.4em;
-  border-radius: 50%;
-  left: 10%;
-  bottom: 15%;
-  box-shadow: inset 8px -4px 0px 0px #f8f5c7;
-  background: var(--background);
-  transition: 0.5s;
-}
-div.der.container.col-8 header .btns input:checked + .slider {
-  background-color: #ababac;
-}
-div.der.container.col-8 header .btns input:checked + .slider:before {
-  transform: translateX(100%);
-  box-shadow: inset 15px -4px 0px 15px #f8f5c7;
 }
 div.der.container.col-8 header .btns .dropbtn {
   border-radius: 50%;
@@ -243,6 +197,10 @@ div.der.container.col-8 header .btns #n3 {
 div.der.container.col-8 header .btns #n4 {
   background-color: #ffffff;
   color: #ffd085;
+}
+div.der.container.col-8 header .btns #n5 {
+  background-color: #ffffff;
+  color: #2c2c2c;
 }
 div.der.container.col-8 header .btns .dropdown-content i:hover {
   transform: scale(1.2);
