--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -248,11 +248,11 @@ div.der.container.col-8 .accordion-body {
   -moz-box-shadow: 0px 0px 10px 0px rgba(163, 163, 163, 0.3) inset;
 }
 div.der.container.col-8 .accordion-body a {
-  text-decoration: solid, #2c2c2c;
-  color: #2c2c2c;
+  text-decoration: solid, #f2f2f2;
+  color: #f2f2f2;
 }
 div.der.container.col-8 .accordion-body a:hover {
-  text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 0px 7px rgba(245, 245, 245, 0.75);
 }
 
 /* The switch - the box around the slider */
