--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,7 @@ div.izq.container.col-4 {
       border-radius: 50%;
       width: 100%;
       max-width: 180px;
+      min-width: 100px;
       transition-duration: 1.2s;
     }
     img:hover {
@@ -375,7 +376,7 @@ div.der.container.col-8 {
   right: 0;
   bottom: 0;
   background-color: rgb(0, 0, 0);
-  transition: .4s;
+  transition: 0.4s;
   border-radius: 30px;
 }
 
@@ -388,7 +389,7 @@ div.der.container.col-8 {
   left: 0.3em;
   bottom: 0.3em;
   background-color: rgb(219, 198, 2);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -419,4 +420,64 @@ input:checked + .slider::after {
   left: 80%;
   width: 0px;
   height: 0px;
+}
+
+//* ///////////////////////////////////
+//?           Responsive           ////
+//* ///////////////////////////////////
+
+@media only screen and (max-width: 476px) {
+  .dosColumnas {
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    padding-left: 0%;
+    background-color: rgb(48, 48, 48);
+  }
+
+  #colorOscuro {
+    //? columna izquierda
+    margin: 0.5rem;
+    border: 1px solid red;
+    padding: 0.5rem;
+    min-width: 92.5%;
+  }
+
+  #colorClaro {
+    //? columna derecha
+    margin: 0.5rem;
+    border: 1px solid red;
+    padding: 0.5rem;
+    min-width: 92.5%;
+  }
+  #colorHeader {
+    //? header ---
+    margin: 0rem;
+    border: 1px solid red;
+    padding: 0.1rem;
+    min-width: 92.5%;
+    div.nombre {
+      border: 1px solid rgb(21, 255, 0);
+      margin: 0%;
+      h1 {
+        margin: auto;
+        padding: 0.25rem;
+        font-size: xx-large;
+      }
+      h5 {
+        margin: auto;
+        padding: 0.25rem;
+        font-size: large;
+      }
+    }
+    div.btns {
+      //! en celular quité los botones de cambio de color y modo dark
+      display: none;
+    }
+  }
+  div.accordion{
+    padding: 0.5px;
+    padding-left: 0%; //! no lo tomaaaaaaaaaaaaaaaa
+    border: 1px solid rgb(4, 0, 255);
+    }
 }
