--- a/css/style.css
+++ b/css/style.css
@@ -335,24 +335,20 @@ input:checked + .slider::after {
   }
   #colorOscuro {
     margin: 0.5rem;
-    border: 1px solid red;
     padding: 0.5rem;
     min-width: 92.5%;
   }
   #colorClaro {
-    margin: 0.5rem;
-    border: 1px solid red;
-    padding: 0.5rem;
+    margin: 0.25rem;
+    padding: 0.25rem;
     min-width: 92.5%;
   }
   #colorHeader {
     margin: 0rem;
-    border: 1px solid red;
     padding: 0.1rem;
     min-width: 92.5%;
   }
   #colorHeader div.nombre {
-    border: 1px solid rgb(21, 255, 0);
     margin: 0%;
   }
   #colorHeader div.nombre h1 {
@@ -368,10 +364,18 @@ input:checked + .slider::after {
   #colorHeader div.btns {
     display: none;
   }
-  div.accordion {
+  div.der.container.col-8 #experienciaLaboral,
+  div.der.container.col-8 #educación,
+  div.der.container.col-8 #certificados {
+    padding: 2px;
+  }
+  div.accordion-body {
     padding: 0.5px;
+    padding-top: 1rem;
     padding-left: 0%;
-    border: 1px solid rgb(4, 0, 255);
+  }
+  div.progBar {
+    display: none;
   }
 }
 
